# NDK_Learn

./: .gitignore  README.md
First_Learn/: README.md
First_Learn/app/: build.gradle
First_Learn/app/src/androidTest/java/com/hd/ndk_learn/: ExampleInstrumentedTest.java
First_Learn/app/src/main/: AndroidManifest.xml
First_Learn/app/src/main/java/com/hd/ndklearn/: FirstNdkClass.java  MainActivity.java
First_Learn/app/src/main/jni/: Android.mk  Application.mk  com_hd_ndklearn_FirstNdkClass.h  jnitest.c
First_Learn/app/src/main/res/layout/: activity_main.xml
First_Learn/app/src/main/res/values/: strings.xml
First_Learn/app/src/test/java/com/hd/ndk_learn/: ExampleUnitTest.java
First_Learn/gradle/wrapper/: gradle-wrapper.properties
Second_Learn/: README.md
Second_Learn/app/: build.gradle
Second_Learn/app/src/androidTest/java/com/hd/second_learn/: ExampleInstrumentedTest.java
Second_Learn/app/src/main/: AndroidManifest.xml
Second_Learn/app/src/main/cpp/: CMakeLists.txt  com_hd_ndklearn_FirstNdkClass.h  secondndk.cpp
Second_Learn/app/src/main/java/com/hd/second_learn/: MainActivity.java  SecondNdkClass.java
Second_Learn/app/src/main/res/layout/: activity_main.xml
Second_Learn/app/src/main/res/values/: strings.xml
Second_Learn/app/src/test/java/com/hd/second_learn/: ExampleUnitTest.java
Second_Learn/gradle/wrapper/: gradle-wrapper.properties
Third_Learn/: FFMPEG.md  README.md
Third_Learn/app/: build.gradle
Third_Learn/app/src/androidTest/java/com/hd/third_learn/: ExampleInstrumentedTest.java
Third_Learn/app/src/main/: AndroidManifest.xml
Third_Learn/app/src/main/cpp/: native-lib.cpp
Third_Learn/app/src/main/fjni/: CMakeLists.txt  config.h  transfer.c
Third_Learn/app/src/main/java/com/hd/third_learn/: MainActivity.java  TransferJNI.java
Third_Learn/app/src/main/res/values/: strings.xml
Third_Learn/app/src/test/java/com/hd/third_learn/: ExampleUnitTest.java
Third_Learn/gradle/wrapper/: gradle-wrapper.properties
